# wasm-cross

./: .gitignore  CMakeLists.txt  README.md  index.data  index.js  index.wasm  setup_vs.bat
.github/workflows/: build.yml
src/: camera.cpp  debug.cpp  earth.cpp  frame.cpp  framebuffer.cpp  local.h  main.cpp  shader.cpp  shader.h
src/glsl/: atmosphere.frag  atmosphere.vert  color.frag  color.vert  earth.frag  earth.vert  gamma.frag  gamma.vert  shadow_debug.frag  shadow_debug.vert  shadow_depth.frag  shadow_depth.vert
